# to_clone-16062025

./: .gitignore  APPTIMER_NEWGPIO  CMakeLists.txt  Makefile  README.md  common.h  main.c  myProgram.c  pattern_03.c  pattern_04.c
Cross_compile_build/: CMakeLists.txt
Native_build/: CMakeLists.txt
appTimer/: appTimer.c  appTimer.h
gpioFunctions/: gpioFunctions.c  gpioFunctions.h
gpioWrapper/: gpioWrapper.c  gpioWrapper.h
ledStatus/: ledStatus.c  ledStatus.h
